@@ -3,6 +3,7 @@ CHANGES.txt - 10/04/2004
 
 CHANGES IN CUPS V1.1.22
 
+	- Also sanitize device URI in argv[0] (STR #933)
 	- cupsRasterReadHeader() didn't swap bytes for the
 	  numeric fields properly (STR #930)
 
